les tests de toutes les couches sont passés mais ça n'a pas réglé mon problème

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Transaction</title>
 </head>
 <body>
-$END$
+<h1>Transaction</h1>
+<div class="new-transaction">
+    <form method="post" action="create">
+        <input list="connection" name="connection" id="connection">
+        <datalist id="list-connection">
+            <option value="test">test</option>
+        </datalist>
+    </form>
+</div>
 </body>
 </html>
