--- a/src/main/resources/templates/transaction/transaction.html
+++ b/src/main/resources/templates/transaction/transaction.html
@@ -6,13 +6,18 @@
 </head>
 <body>
     <h1>transaction</h1>
-    <form>
-        <select name="connectionList" id="connections">
-            <option value="">--</option>
+    <form th:action="@{/transaction/new-transaction}" th:object="${transaction}" method="post">
+        <select name="connectionList" id="receiverId" th:field="*{recipient.identifier}">
+            <option value="" disabled selected>Choisissez une connexion</option>
+            <option th:each="account : ${accountDtoList}"
+                    th:value="${account.getIdentifier()}"
+                    th:text="${account.getFirstName()} + ' ' + ${account.getLastName()}">
+
+            </option>
         </select>
-        <input type="text" name="name" id="name" placeholder="Description">
-        <input type="number" name="amount" id="amount" placeholder="0€">
-        <button name="submit">Payer</button>
+        <input type="text" name="name" id="name" placeholder="Description" th:field="*{name}">
+        <input type="number" name="amount" id="amount" placeholder="0€" th:field="*{amount}">
+        <button type="submit">Payer</button>
     </form>
 
     <table>
