problème de template sur nouvelle connexion

--- a/src/main/resources/templates/connection/connection.html
+++ b/src/main/resources/templates/connection/connection.html
@@ -5,24 +5,13 @@
     <title>new connection</title>
 </head>
 <body>
-    <form action="#" th:action="@{/connection/new-connection.html}" method="post" th:object="${connection}">
+    <form action="#" th:action="@{/connection/new-connection.html}" th:object="connection" method="post">
         <label>Chercher une relation</label>
-        <select name="connections" id="connectionId" th:field="*{connectionId}">
-            <option disabled selected>Saisir une adresse email</option>
-            <option th:each="account: ${connections}"
-                    th:value="${account.getIdentifier()}"
-                    th:text="${account.getFirstName()} + ' ' + ${account.getLastName()}">
-
-            </option>
-        </select>
-        <div th:if="${connections.isEmpty()}">
-            <h2 style="color: red">Aucune personne n'a cette adresse email</h2>
-        </div>
-        <div th:if="${!connections.isEmpty()}">
+        <input type="text" th:field="*{connection.connectionEmail()}" placeholder="Saisir une adresse email"/>
+        <button type="submit">Ajouter</button>
+        <!--<div th:if="${!connections.isEmpty()}">
             <h2 style="color: green">Nouvelle connexion créée</h2>
-        </div>
-            <button type="submit">Ajouter</button>
-
+        </div>-->
     </form>
 </body>
 </html>
