la template transaction fonctionne correctement du point de vue du paiement

--- a/src/main/resources/templates/home/settings.html
+++ b/src/main/resources/templates/home/settings.html
@@ -5,14 +5,14 @@
     <title>settings</title>
 </head>
 <body>
-    <form th:action="@{/home/new-settings}" th:object="${account}" method="post">
+    <form th:action="@{/home/settings}" th:object="${account}" method="post">
         <label>Username</label>
         <input type="text" th:field="*{username}"/>
         <label>Email</label>
         <input type="text" th:field="*{email}"/>
         <label>Password</label>
         <input type="password" th:field="*{password}"/>
-        <input type="submit" value="submit"/>
+        <input type="submit" value="Modifier"/>
     </form>
 
 </body>
