--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -5,9 +5,9 @@
     <title>login</title>
 </head>
 <body>
-  <form action="#" th:action="@{/login}" method="post">
-    <input type="text" name="username" placeholder="mail"/>
-    <input type="password" name="password" placeholder="Mot de passe"/>
+  <form th:action="@{/transaction/transaction}" th:object="${account}" method="post">
+    <input type="text" name="username" th:field="*{email}" placeholder="mail"/>
+    <input type="password" name="password" th:field="${account.password}" placeholder="Mot de passe"/>
     <button type="submit">Se connecter</button>
   </form>
 </body>
