--- a/src/main/resources/templates/account/account.html
+++ b/src/main/resources/templates/account/account.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Account</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="../static/assets/styles/style.css" rel="stylesheet">
 </head>
 <body>
   <form action="#" th:action="@{/account}" th:object="${account}" method="get">
