--- a/src/main/resources/templates/home/new-account.html
+++ b/src/main/resources/templates/home/new-account.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>New Account</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link th:href="@{/assets/style.css}" rel="stylesheet" />
 </head>
 <body>
-  <form action="#" th:action="@{/home/new-account}" method="post" th:object="${account}">
-    <input type="text" name="username" placeholder="Username" th:field="*{username}">
-    <input type="text" name="email" placeholder="email" th:field="*{email}">
-    <input type="password" name="password" placeholder="Password" th:field="*{password}">
-    <button type="submit">Se connecter</button>
-  </form>
+<div id="login-box">
+    <div class="container mt-5 login-container">
+        <form action="#" th:action="@{/home/new-account}" method="post" th:object="${account}">
+            <h1 class="application-name">Pay My Buddy</h1>
+            <div class="form-group">
+                <input type="text" class="form-control" aria-describedby="basic-addon2" name="username" placeholder="Username" th:field="*{username}">
+                <input type="text" class="form-control" aria-describedby="basic-addon2" name="email" placeholder="email" th:field="*{email}">
+                <input type="password" class="form-control" aria-describedby="basic-addon2" name="password" placeholder="Password" th:field="*{password}">
+            </div>
+            <button type="submit" class="btn btn-primary button-login">S'inscrire</button>
+        </form>
+    </div>
+</div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
