--- a/src/main/resources/templates/connection/connection.html
+++ b/src/main/resources/templates/connection/connection.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>new connection</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link th:href="@{/assets/style_pages.css}" rel="stylesheet" />
 </head>
 <body>
-
-    <form th:action="@{/connection/connection}" th:object="${account}" method="post">
-        <label for="email">Choisissez une adresse email :</label>
-        <input type="text" id="email" th:field="*{email}" placeholder="Choisissez une adresse email" />
-        <button type="submit">Chercher</button>
-    </form>
+    <div class="login-box">
+        <form th:action="@{/connection/connection}" th:object="${account}" method="post">
+            <label for="email">Chercher une relation :</label>
+            <div class="container input mb-3">
+                <input type="text" class="form-control" id="email" th:field="*{email}" placeholder="Saisir une adresse email" />
+                <button type="submit" class="button-new-relation">Ajouter</button>
+            </div>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
