--- a/src/main/resources/static/assets/style_pages.css
+++ b/src/main/resources/static/assets/style_pages.css
@@ -1,10 +1,32 @@
-body {
-    display: flex;
-    justify-content: center; /* Centre horizontalement */
-    align-items: center; /* Centre verticalement */
-    height: 100vh; /* Prend toute la hauteur de la fenêtre */
-    margin: 0; /* Enlève les marges par défaut */
+nav {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    align-items: baseline;
+    height: 10vh;
 }
+
+nav a {
+    color: black;
+}
+
+.active-link {
+    color: #207fee;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+.paymybuddy {
+    padding-left: 3em;
+    display: flex;
+    width: 40%;
+    align-items: flex-start;
+}
+
 
 .button-new-relation {
     background-color: #f69f1d;
@@ -19,6 +41,10 @@ body {
 
 .login-box {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .input {
