--- a/src/main/resources/static/assets/style_pages.css
+++ b/src/main/resources/static/assets/style_pages.css
@@ -8,6 +8,12 @@ nav {
 
 nav a {
     color: black;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    text-decoration: none;
+    white-space: nowrap;
 }
 
 .active-link {
@@ -33,7 +39,7 @@ nav a {
     display: flex;
     align-content: center;
     color: white;
-    padding: 0.5em;
+    padding: 0.5em 1.5em;
     width: fit-content;
     border-radius: 6px;
     box-shadow: none;
@@ -63,4 +69,20 @@ nav a {
     align-items: center;
     flex-direction: row;
     gap: 0.85vw;
+}
+
+.form-new-transaction {
+    display: flex;
+    flex-direction: row;
+    margin: 0 1.5em;
+    gap: 2vw;
+}
+
+#transaction {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centre horizontalement */
+    align-items: center; /* Centre verticalement */
+    height: 100vh; /* Prend toute la hauteur de la fenêtre */
+    margin: 0; /* Enlève les marges par défaut */
 }
