--- a/src/main/resources/templates/transaction/transaction.html
+++ b/src/main/resources/templates/transaction/transaction.html
@@ -7,6 +7,7 @@
     <link th:href="@{/assets/style_pages.css}" rel="stylesheet" />
 </head>
 <body>
+<nav th:replace="header :: navigation"></nav>
     <div id="transaction">
         <form th:action="@{/transaction/transaction}" th:object="${transaction}" method="post">
             <div class="mb-3 form-new-transaction">
