--- a/src/main/resources/templates/home/settings.html
+++ b/src/main/resources/templates/home/settings.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>settings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link th:href="@{/assets/style_pages.css}" rel="stylesheet" />
 </head>
 <body>
+<nav th:replace="header :: navigation"></nav>
     <form th:action="@{/home/settings}" th:object="${account}" method="post">
         <label>Username</label>
         <input type="text" th:field="*{username}"/>
