--- a/src/main/resources/templates/connection/connection.html
+++ b/src/main/resources/templates/connection/connection.html
@@ -7,19 +7,7 @@
     <link th:href="@{/assets/style_pages.css}" rel="stylesheet" />
 </head>
 <body>
-<nav class="navbar">
-    <div class="container-fluid">
-        <div class="paymybuddy">
-            <a class="navbar-brand" th:href="@{/transaction/transaction}">Pay My Buddy</a>
-        </div>
-
-        <div class="navbar-links">
-            <a class="navbar-brand" th:class="${currentPage == 'page1'} ? 'active-link'" th:href="@{/transaction/transaction}">Transférer</a>
-            <a class="navbar-brand" th:class="${currentPage == 'page2'} ? 'active-link'" th:href="@{/home/settings}">Profil</a>
-            <a class="navbar-brand" th:class="${currentPage == 'page3'} ? 'active-link'" th:href="@{/connection/connection}">Ajouter relation</a>
-            <a class="navbar-brand" th:href="@{/home/login}">Se déconnecter</a>
-        </div>
-    </div>
+<nav class="navbar" th:replace="header :: navigation">
 </nav>
     <div class="login-box">
         <form th:action="@{/connection/connection}" th:object="${account}" method="post">
