--- a/src/main/resources/templates/home/settings.html
+++ b/src/main/resources/templates/home/settings.html
@@ -5,9 +5,11 @@
     <title>settings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link th:href="@{/assets/style_pages.css}" rel="stylesheet" />
+    <!--<link th:href="@{/assets/style_settings.css}" rel="stylesheet" />-->
 </head>
 <body>
 <nav th:replace="header :: navigation"></nav>
+<div class="body">
     <form th:action="@{/home/settings}" th:object="${account}" method="post" class="center-element form-profil">
         <div class="form-profil-input">
             <div class="username">
@@ -25,6 +27,7 @@
         </div>
         <button class="button-new-relation" type="submit" value="Modifier">Modifier</button>
     </form>
+</div>
 
 </body>
 </html>
