--- a/src/main/resources/templates/connection/connection.html
+++ b/src/main/resources/templates/connection/connection.html
@@ -10,6 +10,8 @@
 <nav class="navbar" th:replace="header :: navigation">
 </nav>
     <div class="login-box">
+        <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}"></div>
+        <div th:if="${success}" class="alert alert-success" role="alert" th:text="${success}"></div>
         <form th:action="@{/connection/connection}" th:object="${account}" method="post">
             <label for="email">Chercher une relation :</label>
             <div class="container input mb-3">
