suppression des mappers et dtos pour ne plus avoir le problème de mapping

--- a/src/main/resources/templates/transaction/transaction.html
+++ b/src/main/resources/templates/transaction/transaction.html
@@ -39,7 +39,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="transaction : ${transactions}">
-                    <td th:text="@{${transaction.sender.username}}"></td>
+                    <td th:text="@{${transaction.recipient.username}}"></td>
                     <td th:text="${transaction.name}"></td>
                     <td th:text="${#numbers.formatCurrency(transaction.amount)}"></td>
                 </tr>
